; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/extr_license.c_json_get_end_time.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/extr_license.c_json_get_end_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@END_TIME_FIELD = common dso_local global i32 0, align 4
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@FIELD_NOT_FOUND_ERRSTRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @json_get_end_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @json_get_end_time(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @END_TIME_FIELD, align 4
  %7 = call i32 @cstring_to_text(i32 %6)
  %8 = call i32 @ts_jsonb_get_time_field(i32* %5, i32 %7, i32* %3)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %16, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %13 = load i32, i32* @FIELD_NOT_FOUND_ERRSTRING, align 4
  %14 = load i32, i32* @END_TIME_FIELD, align 4
  %15 = call i32 @elog(i32 %12, i32 %13, i32 %14)
  br label %16

16:                                               ; preds = %11, %1
  %17 = load i32, i32* %4, align 4
  ret i32 %17
}

declare dso_local i32 @ts_jsonb_get_time_field(i32*, i32, i32*) #1

declare dso_local i32 @cstring_to_text(i32) #1

declare dso_local i32 @elog(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
